Modules/posixmodule.c
@@ -6127,6 +6127,12 @@ static struct constdef posix_constants_confstr[] = {
 #ifdef _MIPS_CS_VENDOR
     {"MIPS_CS_VENDOR",	_MIPS_CS_VENDOR},
 #endif
+#ifdef _CS_GNU_LIBC_VERSION
+    {"CS_GNU_LIBC_VERSION",	_CS_GNU_LIBC_VERSION},
+#endif
+#ifdef _CS_GNU_LIBPTHREAD_VERSION
+    {"CS_GNU_LIBPTHREAD_VERSION",	_CS_GNU_LIBPTHREAD_VERSION},
+#endif
 };
 
 static int
